--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yaswanth142.github.io/Cartpage",
+  "homepage": "https://yaswanth142.github.io/Shopping-Cartpage",
   "name": "cartpage",
   "version": "0.1.0",
   "private": true,
